Give images a max-width to prevent scrolling on small screens

--- a/_sass/apollonia.scss
+++ b/_sass/apollonia.scss
@@ -50,6 +50,9 @@ p code {
   padding: 0.2em 0.4em;
 }
 
+img {
+  max-width: 100%;
+}
 
 #head {
   background-color: $bgcolor-head;
